<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/kereses"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
    />
    <item
        android:id="@+id/cart"
        android:title="@string/kocsi"
        android:icon="@drawable/baseline_shopping_cart_24"
        app:showAsAction="always"
        app:actionLayout="@layout/custom_menu_item"
        />
    <item
        android:id="@+id/view_selector"
        android:title="@string/megtekintes"
        android:icon="@drawable/baseline_view_list_24"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/setting_button"
        android:title="@string/beallitasok"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/logout_button"
        android:title="@string/kijelentkezes"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        />
</menu>